--- a/iitb_risc.qsf
+++ b/iitb_risc.qsf
@@ -52,9 +52,19 @@ set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR "-1"
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim (VHDL)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "NO HEAT SINK WITH STILL AIR"
+set_global_assignment -name VHDL_FILE priority_encoder.vhd
+set_global_assignment -name VHDL_FILE multiplexor_1s.vhd
+set_global_assignment -name VHDL_FILE leftshift.vhd
+set_global_assignment -name VHDL_FILE inverter_16bit.vhd
 set_global_assignment -name VHDL_FILE subtractor.vhd
 set_global_assignment -name VHDL_FILE full_sub.vhd
 set_global_assignment -name VHDL_FILE adder.vhd
 set_global_assignment -name VHDL_FILE full_adder.vhd
 set_global_assignment -name VHDL_FILE iitb_risc.vhd
-set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "NO HEAT SINK WITH STILL AIR"
+set_global_assignment -name VHDL_FILE nand16.vhd
+set_global_assignment -name VHDL_FILE signextender.vhd
+set_global_assignment -name VHDL_FILE wrapper7.vhd
+set_global_assignment -name VHDL_FILE wrapper10.vhd
+set_global_assignment -name VHDL_FILE dflip.vhd
+set_global_assignment -name VHDL_FILE register16.vhd
