--- a/iitb_risc.qsf
+++ b/iitb_risc.qsf
@@ -53,6 +53,10 @@ set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim (VHDL)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "NO HEAT SINK WITH STILL AIR"
+set_global_assignment -name VHDL_FILE mux_8_1.vhd
+set_global_assignment -name VHDL_FILE mux_4_1.vhd
+set_global_assignment -name VHDL_FILE mux_2_1.vhd
+set_global_assignment -name VHDL_FILE memory.vhd
 set_global_assignment -name VHDL_FILE priority_encoder.vhd
 set_global_assignment -name VHDL_FILE multiplexor_1s.vhd
 set_global_assignment -name VHDL_FILE leftshift.vhd
@@ -68,3 +72,4 @@ set_global_assignment -name VHDL_FILE wrapper7.vhd
 set_global_assignment -name VHDL_FILE wrapper10.vhd
 set_global_assignment -name VHDL_FILE dflip.vhd
 set_global_assignment -name VHDL_FILE register16.vhd
+set_global_assignment -name VHDL_FILE alu.vhd
