--- a/iitb_risc.qsf
+++ b/iitb_risc.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "MAX V"
 set_global_assignment -name DEVICE 5M1270ZT144C5
-set_global_assignment -name TOP_LEVEL_ENTITY alu
+set_global_assignment -name TOP_LEVEL_ENTITY iitb_risc
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "23:36:36  OCTOBER 23, 2018"
 set_global_assignment -name LAST_QUARTUS_VERSION 16.0.0
@@ -53,6 +53,7 @@ set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "NO HEAT SINK WITH STILL AIR"
+set_global_assignment -name VHDL_FILE register1.vhd
 set_global_assignment -name VHDL_FILE decoder_3_8.vhd
 set_global_assignment -name VHDL_FILE registerfile.vhd
 set_global_assignment -name VHDL_FILE and_1_16.vhd
